# citrix-monitor-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/citrix_monitor_mcp/: __init__.py  client.py  server.py
src/citrix_monitor_mcp/tools/: __init__.py  analytics.py  applications.py  connections.py  diagnostics.py  machines.py  sessions.py  users.py
