[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citrix-monitor-mcp"
version = "0.1.0"
description = "MCP server for Citrix Monitor Service OData API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["citrix", "mcp", "odata", "monitoring", "daas", "cvad"]
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "requests-ntlm>=1.2.0",
]

[project.scripts]
citrix-monitor-mcp = "citrix_monitor_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/citrix_monitor_mcp"]
